syntax = "proto3";
package mee6aas.agent.invokee.v1;

option go_package = "v1";

service Invokee {
    rpc Listen (ListenRequest) returns (stream Task){};
    rpc Report (ReportRequest) returns (ReportResponse){};
}

message ListenRequest {}

enum TaskType {
    UNKNOWN = 0;
    LOAD = 1;
    INVOKE = 2;
}

message Task {
    TaskType type = 1;
    string id = 2;
    string arg = 3;
}

message ReportRequest {
    string id = 1;
    string result = 2;
    bool isError = 3;
}

message ReportResponse {}
